# opensidewalks-data

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  combine.py  main.sh  merge.py  pyproject.toml  requirements.txt
cities/: .gitignore
cities/bellingham/: Snakefile  Snakefile.fetch
cities/bellingham/output/: crossings.geojson
cities/mtvernon/: Snakefile  Snakefile.fetch  extract.sh
cities/seattle/: Snakefile  Snakefile.fetch  city.json
cities/seattle/input/: override_sidewalks.json  override_streets.json  seattle_elevator_paths.geojson
cities/seattle/output/: crossings.geobuf  elevator_paths.geobuf
cities/uwashington/: Snakefile  extract.sh
data_manager/: requirements.txt  setup.py
data_manager/data_manager/: .fetchers.py.swp  __main__.py  annotate.py  clean.py  crossings.py  dems.py  fetchers.py  make_crossings.py  ped_network.py  raster_interp.py  standardize.py
datahelpers/: pyproject.toml
datahelpers/datahelpers/: circular_ordered_graph.py  haversine.py  io.py  ped_network.py
seattledata/: city.json
src/data_helpers/: __init__.py  circular_ordered_graph.py  fetchers.py  geometry.py  io.py  network.py  ped_network.py  raster_interp.py  utm.py
