[tool.poetry]
name = "datahelpers"
version = "0.1.0"
description = "OpenSidewalks data workflows"
authors = ["Nick Bolten <nbolten@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
crossify = "^0.1.4"
esridump = "^1.7.0"
geopandas = "0.8.1"
pandas = "0.25.3"
rasterio = "^1.0a12"
requests = "^2.21"
rtree = "^0.9.4"
scipy = "^1.0.1"
sidewalkify = "^0.2.1"
snakemake = "^5.24.1"
osmread = {git = "https://github.com/dezhin/osmread.git", rev = "d8d3fe5edd15fdab9526ea7a100ee6c796315663"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
